[package]
name = "moonveil-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
uuid = { workspace = true }

aes-gcm = { workspace = true }
rand = { workspace = true }

quinn = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = "2.0"

[[bench]]
name = "benchmarks"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
