[package]
name = "moonveil-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "moonveil-server"
path = "src/main.rs"

[dependencies]
moonveil-core = { path = "../moonveil-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
